Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62518

Qt Virtual Keyboard tests are flaky

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.3
    • 5.10, 5.12
    • Virtual Keyboard
    • 50d1d95af5cb271285abb4375e63ca28cbadd77a 8b3a4d6f305955171a595ad93460346c58df51d7 6d429be4d77841218d89f5e563593fb39812395d

      Tested locally on a MacBook Pro and all 320 tests pass.

      https://codereview.qt-project.org/#/c/202582/

      https://testresults.qt.io/logs/qt/qtvirtualkeyboard/ea0033688ff25d1ea0ac48103aad54370f4e070a/MacOSOSX_10_11x86_64MacOSOSX_10_11x86_64Clangqtci-osx-10.11-x86_64-3-50f418DeveloperBuild_Release_QtNamespace_NoPch/019580fa7d0a43c9112c12edb32a495527aa689a/test_1502800114/testlog.txt.gz

      PASS   : inputpanel::tst_plugin::test_hwrSpellCorrectionSuggestions(row 4)
      XFAIL  : inputpanel::tst_plugin::test_hwrSpellCorrectionSuggestions(row 5) Handwriting not enabled
         Loc: [/Users/qt/work/qt/qtvirtualkeyboard/tests/auto/inputpanel/data/tst_inputpanel.qml(1200)]
      PASS   : inputpanel::tst_plugin::test_hwrSpellCorrectionSuggestions(row 5)
      SKIP   : inputpanel::tst_plugin::test_hwrWordReselection(row 0) Handwriting not enabled
         Loc: [/Users/qt/work/qt/qtvirtualkeyboard/tests/auto/inputpanel/data/tst_inputpanel.qml(1471)]
      QWARN  : inputpanel::tst_plugin::test_inputLocale(row 0) InputContext::::sendKeyClick(): 1605 no focus
      QWARN  : inputpanel::tst_plugin::test_inputLocale(row 0) InputContext::::sendKeyClick(): 1585 no focus
      QWARN  : inputpanel::tst_plugin::test_inputLocale(row 0) InputContext::::sendKeyClick(): 1581 no focus
      QWARN  : inputpanel::tst_plugin::test_inputLocale(row 0) InputContext::::sendKeyClick(): 1576 no focus
      QWARN  : inputpanel::tst_plugin::test_inputLocale(row 0) InputContext::::sendKeyClick(): 1575 no focus
      FAIL!  : inputpanel::tst_plugin::test_inputLocale(row 0) Compared values are not the same
         Actual   (): 
         Expected (): ?????
         Loc: [/Users/qt/work/qt/qtvirtualkeyboard/tests/auto/inputpanel/data/tst_inputpanel.qml(352)]
      QWARN  : inputpanel::tst_plugin::test_inputLocale(row 1) InputContext::::sendKeyClick(): 1587 no focus
      QWARN  : inputpanel::tst_plugin::test_inputLocale(row 1) InputContext::::sendKeyClick(): 1604 no focus
      QWARN  : inputpanel::tst_plugin::test_inputLocale(row 1) InputContext::::sendKeyClick(): 1575 no focus
      QWARN  : inputpanel::tst_plugin::test_inputLocale(row 1) InputContext::::sendKeyClick(): 1605 no focus
      FAIL!  : inputpanel::tst_plugin::test_inputLocale(row 1) Compared values are not the same
         Actual   (): 
         Expected (): ????
         Loc: [/Users/qt/work/qt/qtvirtualkeyboard/tests/auto/inputpanel/data/tst_inputpanel.qml(352)]
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: