Print the focus window when InputContext::sendKeyClick() fails

So far I've been unable to reproduce the flakiness with
a Windows CI VM, so let's add some extra context to the warning
message that is printed before the test (sometimes) fails.

Task-number: QTBUG-62518
Change-Id: Idebaadb93fe2f38a94a9f096bc044b28171afafd
Reviewed-by: Liang Qi <liang.qi@qt.io>