src/virtualkeyboard/inputcontext.cpp
@@ -444,7 +444,7 @@ void InputContext::sendKeyClick(int key, const QString &text, int modifiers)
     if (d->focus && d->inputContext) {
         QKeyEvent pressEvent(QEvent::KeyPress, key, Qt::KeyboardModifiers(modifiers), text);
         QKeyEvent releaseEvent(QEvent::KeyRelease, key, Qt::KeyboardModifiers(modifiers), text);
-        VIRTUALKEYBOARD_DEBUG() << "InputContext::::sendKeyClick():" << key;
+        VIRTUALKEYBOARD_DEBUG() << "InputContext::sendKeyClick():" << key;
 
         d->stateFlags |= InputContextPrivate::KeyEventState;
         d->inputContext->sendKeyEvent(&pressEvent);
@@ -452,7 +452,8 @@ void InputContext::sendKeyClick(int key, const QString &text, int modifiers)
         if (d->activeKeys.isEmpty())
             d->stateFlags &= ~InputContextPrivate::KeyEventState;
     } else {
-        qWarning() << "InputContext::::sendKeyClick():" << key << "no focus";
+        qWarning() << "InputContext::sendKeyClick(): no focus to send key click" << key << text
+                   << "- QGuiApplication::focusWindow() is:" << QGuiApplication::focusWindow();
     }
 }
 
